# viddur

./: .coverage  .gitignore  .pyproject.toml.swp  README.md  main.py  pyproject.toml  pytest.ini
tests/: conftest.py  pytest.ini  test_main.py
viddur/: __main__.py  main.py
