[tool.poetry]
name = "viddur"
version = "0.1.0"
description = "Calculating and viewing the durations of videos."
authors = ["Mahyar Mahdavi <Mahyar@Mahyar24.com>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.8b0"
isort = "^5.9.3"
mypy = "^0.910"
pytest-asyncio = "^0.15.1"
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
